[package]
name = "storm_server"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "stormsrv"
path = "src/bin/server.rs"

[[bin]]
name = "stormsrvsvc"
path = "src/bin/service.rs"

[dependencies]
chrono = { version = "0.4.41" }
uuid = { version = "1.17.0", features = ["v4"] }
port_check = "0.3.0"
urlencoding = "2.1.3"
once_cell = "1.21.3"
windows-service = "0.8.0"
tokio = {version = "1.46.1", features = ["full"]}
rustls = {  version= "0.23.31", features = ["aws-lc-rs"]}
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
